--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@coreui/vue": "^4.6.1",
+    "appwrite": "^10.2.0",
+    "axios": "^1.3.1",
     "html-to-pdfmake": "^2.4.15",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
