Added experience section

--- a/package.json
+++ b/package.json
@@ -10,21 +10,17 @@
   },
   "dependencies": {
     "@coreui/vue": "^4.6.1",
-    "appwrite": "^10.2.0",
     "axios": "^1.3.1",
-    "html-to-pdfmake": "^2.4.15",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "oh-vue-icons": "^1.0.0-rc3",
-    "pdfmake": "^0.2.7",
     "pinia": "^2.0.29",
     "sass": "^1.57.1",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
-    "vuex": "^4.1.0"
+    "vuejs3-datepicker": "^1.0.14"
   },
   "devDependencies": {
-    "@types/html-to-pdfmake": "^2.4.0",
     "@types/pdfmake": "^0.2.2",
     "@vitejs/plugin-vue": "^4.0.0",
     "typescript": "^4.9.3",
