--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "sass": "^1.57.1",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
+    "vue-slicksort": "^2.0.3",
     "vuejs3-datepicker": "^1.0.14"
   },
   "devDependencies": {
