--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
     "src/**/*.tsx",
     "src/**/*.vue",
     "src/store/index.d.tsts"
-  ],
+, "src/services/fonts/font.js", "src/services/fonts/font.js"  ],
   "references": [
     {
       "path": "./tsconfig.node.json"
