--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,8 +25,10 @@
     "src/**/*.d.ts",
     "src/**/*.tsx",
     "src/**/*.vue",
-    "src/store/index.d.tsts"
-, "src/services/fonts/font.js", "src/services/fonts/font.js"  ],
+    "src/store/index.d.tsts",
+    "src/services/fonts/font.js",
+    "src/services/fonts/font.js"
+  ],
   "references": [
     {
       "path": "./tsconfig.node.json"
