--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cv-gen",
-  "homepage": "cvgen",
+  "homepage": "https://refarefa1.github.io/cvgen/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
