--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,9 @@
 {
-    "routes": [
+    "redirects": [
         {
-            "src": "/[^.]+",
-            "dest": "/",
-            "status": 200
+            "source": "/(.*)",
+            "destination": "/",
+            "permanent": false
         }
     ]
 }
